2005-11-21  Josh Roberson <josh@asteriasgi.com>

	* Makefile: Re-fix Darwin poll issues. 

2005-11-21  Russell Bryant  <russell@digium.com>

	* apps/app_osplookup.c: Properly populate the number of results. (issue #5789)

	* Makefile: Don't hard-code that poll functionality needs to be provided on Darwin.
	* apps/Makefile: Fix incorrect portion of the patch to fix 'make install' on Solaris.

	* channels/chan_iax2.c (iax2_getpeername): Return non-zero to indicate that a peer was found when using realtime (issue #5815)

2005-11-20  Russell Bryant  <russell@digium.com>

	* Makefile apps/Makefile: Fix 'make install' for Solaris. (issue #5775)

	* apps/app_record.c: Don't leak a frame if writing it to the file fails. (issue #5787)

	* Makefile: Create the monitor spool directory when the other spool directories are created.

	* pbx.c.c: Remove some useless checks and unnecessary calls to ast_strlen_zero(). (issue #5805)

	* cli.c: Remove some unnecessary calls to ast_strlen_zero(). (issue #5804)

	* channels/chan_oss.c configs/oss.conf.sample: Add the ability to set callerid in oss.conf. 

	* channels/chan_sip.c channels/chan_iax2.c: Change warning messages about the number of scheduled events happening all at once to debug messages. (issue #5794)

2005-11-20  Josh Roberson <josh@asteriasgi.com>

	* pbx/pbx_spool.c: Fix crash in spooler if set/setvar declared incorrectly. (issue #5806)

	* apps/app_meetme.c: fix 'X' option in MeetMe, with slight modification. (issue #5773)

	* apps/app_voicemail.c: Make sure we're copying the read digits when calling voicemail without a box. (issue #5774)

	* apps/app_md5.c: Fix conditional jump option.

	* apps/app_controlplayback.c: Fix conditional jump option.

	* apps/app_hasnewvoicemail.c: Fix conditional jump option to jump properly, also correct a small typo in the description. (issue #5795)

	* channels/chan_iax2.c: Fix output of iax2 show peer <peer> (issue #5792)
